【CHG】阶段计划更新 【NEW】同质化游戏资产（FA）的原生实现 【NEW】金石木织药原生物质的定义

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -1,4 +1,4 @@
-file(GLOB HEADERS "./*.hpp" "./util/*.hpp")
+file(GLOB HEADERS "./*.hpp" "./util/*.hpp" "./asset_objects/*.hpp")
 
 ## SORT .cpp by most likely to change / break compile
 add_library( taiyi_chain
@@ -6,6 +6,7 @@ add_library( taiyi_chain
              # As database takes the longest to compile, start it first
              database.cpp
              index.cpp
+             asset_index.cpp
 
              taiyi_evaluator.cpp
 
