--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory( chainbase )
 add_subdirectory( schema )
 add_subdirectory( protocol )
 add_subdirectory( net )
+add_subdirectory( lua )
 add_subdirectory( chain )
 add_subdirectory( plugins )
 add_subdirectory( manifest )
