【NEW】增加NFA对象和基本的操作，以及单元测试用例 【CHG】文档修改 【BUG】修复在调用合约函数时候没有当前合约名变量的vm崩溃

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -29,6 +29,9 @@ add_library( taiyi_chain
              contract_worker.cpp
              database_contract.cpp
 
+             nfa_evaluator.cpp
+             database_nfa.cpp
+
              util/impacted.cpp
              util/advanced_benchmark_dumper.cpp
 
