- 增加了专用于NFA的智能脚本内置处理器API - 增加一个用于调用NFA脚本行为的操作，以及相关玄牝的命令 - 区块核心处理增加NFA心跳触发逻辑，相关单元测试用例 - 修正了智能脚本调用的消耗数值

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -31,6 +31,7 @@ add_library( taiyi_chain
 
              nfa_evaluator.cpp
              database_nfa.cpp
+             contract_nfa_handle.cpp
 
              util/impacted.cpp
              util/advanced_benchmark_dumper.cpp
