- 增加创建角色天赋的操作，增加玄牝相关命令 - 白玉京增加角色相关信息查询，增加玄牝相关命令 - 角色天赋关联合约，在角色创建时决定初始天赋和相关初始数据 - 合约处理器增加“出生角色”和查询角色信息的合约接口 - 消息事件增加“角色出生”通知 - 账号/nfa历史信息查询上限值效果修正（对应到返回项目数目）

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library( taiyi_chain
 
              actor_evaluator.cpp
              database_actor.cpp
+             contract_actor_handler.cpp
 
              zone_evaluator.cpp
              database_zone.cpp
