- NFA对象增加参与修真属性，增加修真活动对象及数据库，增加修真底层合约接口 - 物质转化增加更新全局统计量 - 整理全局阳寿、真气和物质的总量核对，满足真气守恒。全局统计量新增物质统计和参与修真真气统计 - 新增修真奖励通知事件，修改奖励非罡通知事件 - 文档更新 - 单元测试用例更新

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -40,6 +40,8 @@ add_library( taiyi_chain
              database_zone.cpp
              contract_zone_handler.cpp
 
+             database_cultivation.cpp
+
              util/impacted.cpp
              util/advanced_benchmark_dumper.cpp
 
