- 合约处理器新增开拓新区域接口 - 修改合约处理器连接区域接口，只要连接区域中有一个区域有权限就允许进行双向连接 - 合约处理器部分接口增加角色生命值检查 - 区域连接上限调整

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -39,11 +39,13 @@ add_library( taiyi_chain
              zone_evaluator.cpp
              database_zone.cpp
              contract_zone_handler.cpp
+             taiyi_geography.cpp
 
              database_cultivation.cpp
 
              util/impacted.cpp
              util/advanced_benchmark_dumper.cpp
+             util/name_generator.cpp
 
              ${HEADERS}
            )
