feat: add tool js_operation_serializer

--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory( build_helpers )
 add_subdirectory( xuanpin )
 add_subdirectory( taiyin )
 add_subdirectory( danuo )
+add_subdirectory( js_operation_serializer )
