--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory( xuanpin )
 add_subdirectory( taiyin )
 add_subdirectory( danuo )
 add_subdirectory( js_operation_serializer )
+add_subdirectory( size_checker )
