chore: 增加一些调试和实验的小工具

--- a/programs/CMakeLists.txt
+++ b/programs/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory( taiyin )
 add_subdirectory( danuo )
 add_subdirectory( js_operation_serializer )
 add_subdirectory( size_checker )
+add_subdirectory( util )
