feat: 合约api去掉直接改变区域类型的api，增加一个对zone对象进行炼化的api

--- a/libraries/chain/CMakeLists.txt
+++ b/libraries/chain/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library( taiyi_chain
              zone_evaluator.cpp
              database_zone.cpp
              contract_zone_handler.cpp
+             zone_rules.cpp
              taiyi_geography.cpp
 
              database_cultivation.cpp
