--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -11,5 +11,6 @@ add_subdirectory( lua )
 add_subdirectory( chain )
 add_subdirectory( plugins )
 add_subdirectory( manifest )
+add_subdirectory( tyme )
 add_subdirectory( xuanpin )
 add_subdirectory( danuo )
